--- a/inkar.html
+++ b/inkar.html
@@ -1,13 +1,13 @@
-<!DOSTYPE htm>
+<!DOCTYPE html>
 <html>
 <head>
- <h1>Өзім туралы</h1>
-<p>Мен Рысбек Іңкәр, 2006 жылы 3 сәуірде Алматы облысында Бостан ауылында дүниеге келдім. Қазіргі таңда Алматы қаласындағы Абай атындағы ҚазҰПУ да " курс философия мамандығын оқып жатырмын.</p>
+ <h1 style="background-color:powderblue;">Өзім туралы</h1>
+<p style="background-color:tomato;">.Мен Рысбек Іңкәр, 2006 жылы 3 сәуірде Алматы облысында Бостан ауылында дүниеге келдім. Қазіргі таңда Алматы қаласындағы Абай атындағы ҚазҰПУ да " курс философия мамандығын оқып жатырмын.</p>
     <meta charset="UTF-8">
-        <title>Rysbek Inkar<?title>
+        <title>Rysbek Inkar</title>
     <style>
         body {
-            background-color:red;
+            background-color:orange;
         }
         h1 {
             text-align: center;
@@ -15,7 +15,11 @@
     </style>
 </head>
 <body>
-     <h1>Rysbek Inkar</h1>
-     <img src="inkarysbek.jpeg" alt="Rysbek Inkar">
+    <p>Аты Рысбек Инкар</p>
+    <p>Phylosophi</p>
+    <a href="https://inkaar06.wixsite.com/rysbek-inkar/my-site-1">Электрондық партфолия</a>
+    <h1>Rysbek Inkar</h1>
+    <img src="inkar.jpeg" alt="Rysbek Inkar">
+    
 </body>
 </html>
